--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,29 +1,37 @@
 ---
 import Icon from "astro-icon";
-import Socials from "../Socials.astro";
 ---
 
 <footer
-  class="relative mx-auto border-t border-[#383737] bg-[#181818] p-20 text-center text-white shadow-md"
+  class="relative mx-auto flex items-center justify-center bg-black p-5 text-white shadow-md"
 >
-  <div class="absolute inset-x-0 -top-5">
-    <button
-      scroll-to-top
-      aria-label="scroll to top"
-      class="mx-auto grid h-12 w-12 cursor-pointer place-items-center rounded-full bg-[#262629] p-1 transition-all hover:bg-accent2 hover:text-white"
+  <nav class="flex items-center">
+    <a
+      class="pr-4 opacity-70 transition-all hover:underline hover:opacity-100"
+      href="mailto:vadegharraj@gmail.com"
+      title="Raj Vadeghar Gmail">Email</a
     >
-      <Icon name="mdi:chevron-up" class="h-full w-full hover:stroke-2" />
-    </button>
-  </div>
-  <p class="text-sm sm:text-base">
-    DESIGNED AND CODED BY
-    <a href="/" class="block underline sm:inline-block"> RAJ VADEGHAR</a>
-  </p>
-  <Socials className="mt-5 flex scale-150 items-center justify-center gap-2" />
+    <a
+      class="px-4 opacity-70 transition-all hover:underline hover:opacity-100"
+      href="https://www.linkedin.com/in/rajvadeghar2000/"
+      title="Raj Vadeghar LinkedIn">Linkedin</a
+    >
+    <a
+      class="px-4 opacity-70 transition-all hover:underline hover:opacity-100"
+      href="https://github.com/RajVadeghar"
+      title="Raj Vadeghar Github">Github</a
+    >
+
+    <a
+      href="#"
+      class="mx-4 flex items-center gap-1 rounded-full p-2 opacity-70 transition-all hover:bg-white/10 hover:underline hover:opacity-100"
+      ><Icon name="mdi:chevron-up" class="h-7 w-7 hover:stroke-2" /></a
+    >
+  </nav>
 </footer>
 
-<script>
-  const button = document.querySelector("[scroll-to-top]");
+<script is:inline>
+  const button = document.getElementById("scroll-to-top");
 
   button?.addEventListener("click", () => {
     window.scrollTo({
