--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,7 +12,9 @@ import { Image } from "astro:assets";
     <div
       class="mx-auto flex w-full max-w-screen-lg flex-col items-center gap-10 overflow-x-hidden px-5 py-32 md:flex-row md:items-start md:py-44"
     >
-      <img
+      <Image
+        height={200}
+        width={200}
         id="profile-img"
         src="/linkedin.jpg"
         alt="raj"
@@ -28,6 +30,7 @@ import { Image } from "astro:assets";
               Vadeghar Raja Narayana
             </h1>
             <Socials
+              id="about-socials"
               className="flex items-center gap-2 [&_svg]:h-5 [&_svg]:w-5"
             />
           </div>
