--- a/src/pages/blog/[blog].astro
+++ b/src/pages/blog/[blog].astro
@@ -27,20 +27,24 @@ const hasRelatedPosts = filteredRelated.length > 0;
 const outline = parseOutline(post.body);
 ---
 
-<Layout title={post.seoTitle}>
+<Layout
+  title={post.seoTitle}
+  description={post.seoDescription}
+  keywords={post.seoKeywords}
+>
   <article>
     <div class="fixed inset-0 -z-50 grid place-items-center">
       <div class="fixed inset-0 z-10 bg-black/10"></div>
       <Image
         transition:name={post.slug.current}
-        src={urlForImage(post.mainImage.asset).url()}
+        src={urlForImage(post.mainImage.asset).format("webp").url()}
         alt={post.title}
         class="absolute inset-0 h-full w-full object-cover opacity-50"
         width="400"
         height="250"
       />
       <h1
-        class="text-balance relative max-w-md pb-4 text-center text-xl font-bold text-white sm:text-5xl"
+        class="text-balance relative max-w-2xl pb-4 text-center text-xl font-bold text-white sm:text-5xl"
       >
         {post.title}
       </h1>
