feat: implement seo using astro-seo, refactor: about page ui

--- a/src/components/uses/hero-uses.astro
+++ b/src/components/uses/hero-uses.astro
@@ -54,7 +54,7 @@ const Uses = [
 ---
 
 <Section
-  className="mx-auto grid w-full max-w-screen-md place-items-center overflow-x-hidden px-5 pt-32 md:pt-44"
+  className="mx-auto grid w-full max-w-4xl place-items-center overflow-x-hidden px-5 pt-20"
 >
   <div class="flex w-full flex-col gap-5">
     {
