--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="404 page not found">
+<Layout seo={{ title: "404 page not found" }}>
   <main class="flex h-screen w-full items-center justify-center">
     <div class="flex flex-col items-center gap-3 text-center">
       <h1 class="text-3xl">Welp, Something is misplaced!</h1>
