--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,11 @@ import TestimonialsSection from "@/components/home/TestimonialsSection.astro";
 ---
 
 <Layout
-  title="R44J | Full Stack Developer - Portfolio"
-  description="R44J, a Full Stack Developer skilled in Figma designs, scalable architectures, backend and frontend development, SEO, chrome extensions, and e-commerce. Explore my diverse expertise and collaborations in IOS apps, mobile apps, and PWAs."
+  seo={{
+    title: "R44J | Full Stack Developer - Portfolio",
+    description:
+      "R44J, a Full Stack Developer skilled in Figma designs, scalable architectures, backend and frontend development, SEO, chrome extensions, and e-commerce. Explore my diverse expertise and collaborations in IOS apps, mobile apps, and PWAs."
+  }}
 >
   <Main>
     <HeroSection />
