--- a/src/pages/uses.astro
+++ b/src/pages/uses.astro
@@ -4,7 +4,7 @@ import HeroUses from "../components/uses/hero-uses.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="R44J - Tools">
+<Layout seo={{ title: "R44J - Tools" }}>
   <Main>
     <HeroUses />
     <!-- <ReviewSection /> -->
