--- a/src/pages/xerox.astro
+++ b/src/pages/xerox.astro
@@ -6,7 +6,7 @@ const { default: StickyNote } = await import(
 );
 ---
 
-<Layout title="R44J Xerox and Services - Khammam">
+<Layout seo={{ title: "R44J Xerox and Services - Khammam" }}>
   <Main>
     <div
       class="mx-auto flex w-full max-w-screen-lg flex-col items-center gap-10 overflow-x-hidden px-5 py-32 md:max-w-screen-xl md:py-44"
