--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,9 @@
 ---
+import { SEO, type Props as SEOProps } from "astro-seo";
 interface Props {
-  title: string;
-  description?: string;
   className?: string;
   keywords?: string | undefined;
+  seo?: SEOProps;
 }
 
 import Footer from "@/components/layout/Footer.astro";
@@ -11,7 +11,7 @@ import Header from "@/components/layout/Header.astro";
 import GoogleAnalytics from "@/components/google-analytics.astro";
 import SpeedInsights from "@vercel/speed-insights/astro";
 import { ViewTransitions } from "astro:transitions";
-const { title, description, className, keywords } = Astro.props;
+const { className, seo, keywords } = Astro.props;
 ---
 
 <!doctype html>
@@ -24,33 +24,34 @@ const { title, description, className, keywords } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     {keywords && <meta name="keywords" content={keywords} />}
     <ViewTransitions />
-    <title>{title}</title>
-    <meta
-      name="description"
-      content={description ??
-        "R44J, a Full Stack Developer skilled in Figma designs, scalable architectures, backend and frontend development, SEO, chrome extensions, and e-commerce. Explore my diverse expertise and collaborations in IOS apps, mobile apps, and PWAs."}
-    />
     <meta
       name="keywords"
       content="R44J, Full Stack Developer, Figma designs, Scalable Architectures, Backend Development, Frontend Development, SEO, Chrome Extensions, E-commerce, IOS Apps, Mobile Apps, PWA"
     />
-
-    <meta
-      property="og:title"
-      content="R44J | Full Stack Developer - Portfolio"
-    />
-    <meta
-      property="og:description"
-      content="Explore R44J's skills in Figma designs, scalable architectures, frontend and backend development, SEO, and more. Specializing in Chrome extensions, e-commerce, and collaborating on IOS apps, mobile apps, and PWAs."
-    />
-
-    <meta
-      name="twitter:title"
-      content="R44J | Full Stack Developer - Portfolio"
-    />
-    <meta
-      name="twitter:description"
-      content="Discover R44J's expertise in Figma designs, scalable architectures, frontend and backend development, SEO, and more. Specializing in Chrome extensions, e-commerce, and collaborating on IOS apps, mobile apps, and PWAs."
+    <SEO
+      {...seo}
+      title={seo?.title ?? "R44J | Full Stack Developer - Portfolio"}
+      description={seo?.description ??
+        "R44J, a Full Stack Developer skilled in Figma designs, scalable architectures, backend and frontend development, SEO, chrome extensions, and e-commerce. Explore my diverse expertise and collaborations in IOS apps, mobile apps, and PWAs."}
+      openGraph={seo?.openGraph ?? {
+        basic: {
+          image: "",
+          title: "R44J | Full Stack Developer - Portfolio",
+          type: "website",
+          url: "https://r44j.dev"
+        },
+        optional: {
+          description:
+            "Explore R44J's skills in Figma designs, scalable architectures, frontend and backend development, SEO, and more. Specializing in Chrome extensions, e-commerce, and collaborating on IOS apps, mobile apps, and PWAs.",
+          siteName: "R44J Vadeghar - Full Stack Developer"
+        }
+      }}
+      twitter={seo?.twitter ?? {
+        title: "R44J | Full Stack Developer - Portfolio",
+        description:
+          "Discover R44J's expertise in Figma designs, scalable architectures, frontend and backend development, SEO, and more. Specializing in Chrome extensions, e-commerce, and collaborating on IOS apps, mobile apps, and PWAs.",
+        creator: "@VadegharRaj"
+      }}
     />
 
     <link rel="sitemap" href="/sitemap-index.xml" />
