--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -7,7 +7,7 @@ import Layout from "../../layouts/Layout.astro";
 const blogs = await getBlogs();
 ---
 
-<Layout title="R44J - Blogs">
+<Layout seo={{ title: "R44J - Blogs" }}>
   <Main className="mx-auto max-w-4xl pt-24 sm:pt-48">
     {
       blogs.length > 0 ? (
