feat: add eslint, refactor: typescript

--- a/src/components/blog/table-of-content.astro
+++ b/src/components/blog/table-of-content.astro
@@ -1,22 +1,24 @@
 ---
+import type { Block } from "@/helpers/server-actions";
+
+interface Props {
+  blocks: Block[];
+}
 const props = Astro.props;
 
-// @ts-ignore
-const getChildrenText = (props) =>
-  props.children
-    // @ts-ignore
+const getChildrenText = (block: Block) =>
+  block.children
     .map((node) => (typeof node === "string" ? node : node.text || ""))
     .join("");
 ---
 
 <ol class="flex flex-col gap-3 text-white/60">
   {
-    // @ts-ignore
-    props.outline.map((heading) => (
+    props.blocks.map((heading) => (
       <li id={`toc-${heading._key}`} class="transition-all hover:text-white/90">
         <a href={"#" + heading._key}>{getChildrenText(heading)}</a>
-        {heading.subheadings.length > 0 && (
-          <Astro.self outline={heading.subheadings} />
+        {heading.subheadings && heading.subheadings.length > 0 && (
+          <Astro.self blocks={heading.subheadings} />
         )}
       </li>
     ))
