--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -23,7 +23,7 @@ import Icon from "astro-icon";
     >
 
     <a
-      href="#"
+      href="/#"
       class="mx-4 flex items-center gap-1 rounded-full p-2 opacity-70 transition-all hover:bg-white/10 hover:underline hover:opacity-100"
       ><Icon name="mdi:chevron-up" class="h-7 w-7 hover:stroke-2" /></a
     >
