--- a/src/components/uses/hero-uses.astro
+++ b/src/components/uses/hero-uses.astro
@@ -47,7 +47,7 @@ const Uses = [
   {
     name: "Mini Sealer",
     description:
-      "For occasional indulgence in packaged food, this Mini Sealer helps me preserve leftovers without compromising freshness. Not much effective with hign volume of plastic bags.",
+      "For occasional indulgence in packaged food, this Mini Sealer helps me preserve leftovers without compromising freshness. Not much effective with high volume of plastic bags.",
     link: "https://www.amazon.in/Nirdambhay-Handheld-Portable-Resealer-Including/dp/B08YK7BBD2/ref=sr_1_3?dib=eyJ2IjoiMSJ9.qDB7LWXcAEfS6u59RFkcyZpI73mmIsmO0w7pNUg4cqdJyBK9CqlsArB7kSR8sU1Gj1p6j3Q11DLydeY_-2FEdBROEOfoYvjVw7fF6rvPdXXS_pXfaCeeGZnC6nflmD4gW7mIrRyaXYSp88E3gAaVZ-l0_2h19GwsWgYSZldHNhu3BhrZby5x30KXthNGQxjgnSLVuVICeiqomhiVnZ_klT2QrCeWt7Qw1wZcfaj_1Ow.LYMuBwXabr_nRr_UX03mlyoOlCxE2q8XeI_RFZitJ_g&dib_tag=se&keywords=sealer&qid=1708774906&sr=8-3&th=1"
   }
 ];
