--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -33,7 +33,7 @@ import { Image } from "astro:assets";
               </h1>
               <p class="text-xl font-bold">
                 <span class="text-accent">Full Stack</span>
-                 Developer
+                Developer
               </p>
             </div>
 
@@ -55,9 +55,8 @@ import { Image } from "astro:assets";
           <strong class="text-white">
             Full-stack web dev with 1.5 years at a US startup.
           </strong>
-           Skilled in React, Next.js, Tailwind, Chrome extensions & SEO. I Build
-          engaging & scalable web apps. Looking to bring your vision to life?
-          Let's connect
+          Skilled in React, Next.js, Tailwind, Chrome extensions & SEO. I Build engaging
+          & scalable web apps. Looking to bring your vision to life? Let's connect
         </div>
 
         <div class="flex flex-col gap-5 py-5">
