--- a/src/components/google-analytics.astro
+++ b/src/components/google-analytics.astro
@@ -3,7 +3,7 @@
 <script is:inline>
   window.dataLayer = window.dataLayer || [];
   function gtag() {
-    dataLayer.push(arguments);
+    window.dataLayer.push(arguments);
   }
   gtag("js", new Date());
 
