--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,7 @@ interface Props {
   seo?: SEOProps;
 }
 
+import "@fontsource/outfit";
 import Footer from "@/components/layout/Footer.astro";
 import Header from "@/components/layout/Header.astro";
 import GoogleAnalytics from "@/components/google-analytics.astro";
@@ -56,13 +57,6 @@ const { className, seo, keywords } = Astro.props;
 
     <link rel="sitemap" href="/sitemap-index.xml" />
 
-    <script is:inline>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-    </script>
-
     <GoogleAnalytics />
 
     <script is:inline>
@@ -108,7 +102,7 @@ const { className, seo, keywords } = Astro.props;
       html {
         overflow-x: hidden;
         scroll-behavior: smooth;
-        font-family: system-ui, sans-serif;
+        font-family: "Outfit", system-ui, sans-serif;
         -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       }
     </style>
@@ -116,6 +110,7 @@ const { className, seo, keywords } = Astro.props;
 
     <noscript
       ><iframe
+        title="google-tag-manager"
         src="https://www.googletagmanager.com/ns.html?id=GTM-T3FDZDQ2"
         height="0"
         width="0"
