refactor: update social links, fix(css): mobile responsiveness

--- a/src/components/home/HeroSection.astro
+++ b/src/components/home/HeroSection.astro
@@ -7,20 +7,19 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
 ---
 
 <Section
-  className="mx-auto grid w-full max-w-screen-2xl place-items-center overflow-x-hidden px-5 pt-32 md:pt-44"
+  className="mx-auto grid w-full max-w-screen-2xl place-items-center overflow-x-hidden px-5 md:pt-24"
 >
   <div class="flex w-full flex-col items-center gap-5 text-center">
     <p class="text-3xl font-semibold leading-tight sm:text-4xl md:text-5xl">
       I'm a <span class="text-white">Development Ally</span><br />for Innovators
-
 
       <span class="[&>svg]:inline-block [&>svg]:h-8 [&>svg]:w-8">
         <Fragment set:html={funStar} />
       </span>
     </p>
     <p class="text-lg font-medium text-white/70">
-      Quickly crafts frontend designs, codes templates, and excels <br /> in
-      both backend development and design.
+      Quickly crafts frontend designs, codes templates, and excels <br /> in both
+      backend development and design.
     </p>
 
     <a
@@ -66,8 +65,8 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
           </div>
           <div class="flex-shrink">
             <strong class="text-white/90">Automation:</strong>
-             Aliases, snippets, and scripts streamline my workflow, freeing up
-            time for creative problem-solving.
+            Aliases, snippets, and scripts streamline my workflow, freeing up time
+            for creative problem-solving.
           </div>
         </li>
         <li class="flex items-center gap-3">
@@ -78,8 +77,8 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
           </div>
           <div class="flex-shrink">
             <strong class="text-white/90">Agility:</strong>
-             I navigate complex tasks with ease, using shortcuts to deliver
-            solutions with speed and precision.
+            I navigate complex tasks with ease, using shortcuts to deliver solutions
+            with speed and precision.
           </div>
         </li>
         <!-- <li class="flex items-center gap-3">
