--- a/src/components/home/TestimonialsSection.astro
+++ b/src/components/home/TestimonialsSection.astro
@@ -8,20 +8,20 @@ import Section from "../Section.astro";
 ---
 
 <Section id="services" className="w-full">
-  <div class="bg-black py-20 text-white md:py-36">
+  <div class="bg-black text-white md:py-36">
     <div
       class="mx-auto flex w-full max-w-screen-2xl flex-col gap-10 overflow-x-hidden px-5"
     >
       <header class="mx-auto flex flex-col gap-5 text-center">
-        <h2 class="text-4xl font-medium">
+        <h2 class="text-3xl font-medium md:text-4xl">
           Client Success Stories: <br />Your Success is My Mission.
         </h2>
 
         <p class="text-white/60">
           In my journey as a freelancer, it's the successful partnerships and
-          satisfied clients that truly measure my impact.<br /> Hear directly
-          from those who've transformed their businesses with my services
-          (including my friends)
+          satisfied clients that truly measure my impact.<br /> Hear directly from
+          those who've transformed their businesses with my services (including my
+          friends)
         </p>
       </header>
 
@@ -64,13 +64,14 @@ import Section from "../Section.astro";
                     Raj and Subhash transformed our vision into a stunning
                     reality for Kairos Club. <br />
 
-                     Their expertise and dedication shone through, delivering a website
-                    that brilliantly captures our essence. The seamless blend of
-                    design and functionality showcases their talent. <br />
+                    Their expertise and dedication shone through, delivering a
+                    website that brilliantly captures our essence. The seamless
+                    blend of design and functionality showcases their talent. <br
+                    />
 
-                     We wholeheartedly recommend their team for their exceptional
-                    work and commitment to excellence. Thank you for elevating our
-                    online presence.
+                    We wholeheartedly recommend their team for their exceptional
+                    work and commitment to excellence. Thank you for elevating
+                    our online presence.
                   </p>
                 </div>
               </div>
