--- a/src/components/layout/HeaderNavItem.astro
+++ b/src/components/layout/HeaderNavItem.astro
@@ -1,10 +1,11 @@
 ---
 type Props = {
   href: string;
-  active: boolean;
 };
 
-const { href, active } = Astro.props;
+const { href } = Astro.props;
+const pathname = Astro.url.pathname;
+const active = pathname === href;
 ---
 
 <a
