--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -3,7 +3,7 @@ const { className }: { className?: string } = Astro.props;
 ---
 
 <main
-  class={`flex min-h-screen w-full flex-col gap-14 px-4 py-12 pt-24 sm:px-6 lg:px-8 ${
+  class={`flex min-h-screen w-full flex-col gap-10 md:gap-14 px-4 py-12 pt-24 sm:px-6 lg:px-8 ${
     className ? className : ""
   }`}
 >
