--- a/src/components/home/ServicesSection.astro
+++ b/src/components/home/ServicesSection.astro
@@ -4,7 +4,7 @@ import Section from "../Section.astro";
 
 <Section id="services" className="w-full">
   <div
-    class="mx-auto flex max-w-screen-xl flex-col items-center justify-center gap-48 overflow-x-hidden py-20 md:py-36"
+    class="mx-auto flex max-w-screen-xl flex-col items-center justify-center gap-20 overflow-x-hidden py-10 sm:py-20 md:gap-48 md:py-36"
   >
     <div
       class="flex w-full flex-col justify-between gap-10 overflow-x-hidden px-5 md:flex-row md:px-10"
