--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,5 +1,6 @@
 ---
 import Icon from "astro-icon";
+import SocialLinks from "@/constants/socials";
 ---
 
 <footer
@@ -8,35 +9,34 @@ import Icon from "astro-icon";
   <nav class="flex items-center">
     <a
       class="pr-4 opacity-70 transition-all hover:underline hover:opacity-100"
-      href="mailto:vadegharraj@gmail.com"
-      title="Raj Vadeghar Gmail">Email</a
+      href={SocialLinks.mail.url}
+      title={SocialLinks.mail.title}>Email</a
     >
     <a
       class="px-4 opacity-70 transition-all hover:underline hover:opacity-100"
-      href="https://www.linkedin.com/in/rajvadeghar2000/"
-      title="Raj Vadeghar LinkedIn">Linkedin</a
+      href={SocialLinks.linkedin.url}
+      title={SocialLinks.linkedin.title}>Linkedin</a
     >
     <a
       class="px-4 opacity-70 transition-all hover:underline hover:opacity-100"
-      href="https://github.com/RajVadeghar"
-      title="Raj Vadeghar Github">Github</a
+      href={SocialLinks.github.url}
+      title={SocialLinks.github.title}>Github</a
     >
-
-    <a
-      href="/#"
+    <button
+      onclick="scrollToTop()"
       class="mx-4 flex items-center gap-1 rounded-full p-2 opacity-70 transition-all hover:bg-white/10 hover:underline hover:opacity-100"
-      ><Icon name="mdi:chevron-up" class="h-7 w-7 hover:stroke-2" /></a
     >
+      <Icon name="mdi:chevron-up" class="h-7 w-7 hover:stroke-2" />
+    </button>
   </nav>
 </footer>
 
 <script is:inline>
-  const button = document.getElementById("scroll-to-top");
-
-  button?.addEventListener("click", () => {
+  // eslint-disable-next-line @typescript-eslint/no-unused-vars
+  function scrollToTop() {
     window.scrollTo({
       top: 0,
       behavior: "smooth"
     });
-  });
+  }
 </script>
