--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,13 @@ import Layout from "../layouts/Layout.astro";
 import HeroSection from "@/components/home/HeroSection.astro";
 import ServicesSection from "@/components/home/ServicesSection.astro";
 import TestimonialsSection from "@/components/home/TestimonialsSection.astro";
+import SiteData from "@/constants/siteData.json";
 ---
 
 <Layout
   seo={{
-    title: "R44J | Full Stack Developer - Portfolio",
-    description:
-      "R44J, a Full Stack Developer skilled in Figma designs, scalable architectures, backend and frontend development, SEO, chrome extensions, and e-commerce. Explore my diverse expertise and collaborations in IOS apps, mobile apps, and PWAs."
+    title: SiteData.default.title,
+    description: SiteData.default.description
   }}
 >
   <Main>
